# scppr

./: .gitignore  .gitmodules  CMakeLists.txt
assets/: cube.mtl
assets/shader/: simple_light.fragment_shader.c_
scppr/: scppr.h
src/example/01/: hello_world.cpp
src/example/02/: camera.cpp  camera.h  scene_explorer.cpp
src/example/hello_world/: hello_world.cpp
src/lib/: glad.c  glad.h  log.h  scppr.cpp  scppr.h
src/lib/shader/: light.fragment_shader.c_  light.vertex_shader.c_  shader.cpp  shader.h  simple.fragment_shader.c_  simple.vertex_shader.c_  simple_light.fragment_shader.c_  simple_light.vertex_shader.c_
src/lib/texture/: stb_image.cpp  stb_image.h
